Blog improvements and static files

--- a/blog/templates/blog/album.css
+++ b/blog/templates/blog/album.css
@@ -32,3 +32,12 @@ footer {
 footer p {
     margin-bottom: .25rem;
 }
+
+.card-columns {
+    @include media-breakpoint-only(lg) {
+        column-count: 4;
+    }
+    @include media-breakpoint-only(xl) {
+        column-count: 5;
+    }
+}
