--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-{% load static %}
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +8,6 @@
         <title>Lucas Melo | Site</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,7 +30,7 @@
         }
         </style>
         <!-- Custom styles for this template -->
-        <link href="jobs/templates/jobs/album.css" rel="stylesheet">
+        <link href="blog/templates/blog/album.css" rel="stylesheet">
 
     </head>
 
@@ -45,13 +43,13 @@
                     </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#">JOBS <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">RESUME</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="#">BLOG</a>
                         </li>
                     </ul>
@@ -63,48 +61,31 @@
             </nav>
         </header>
 
-        <main role="main">
-            <section class="jumbotron text-center">
-                <div class="container pt-3">
-                    <h1 class="jumbotron-heading">Hi, I'm Lucas.</h1>
-                    <p class="text-muted">I was born in São José/SC, Brazil. I arrived in Dublin in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
-                    <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
-                    <br><br>
-                    <span style="font-size: 2em">
-                        <a href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark"></i></a>
-                        <a href="https://www.github.com" target="_blank" title="GitHub"><i class="fab fa-github text-dark"></i></a>
-                        <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="Mail me"><i class="fas fa-envelope-open-text text-dark"></i></a>
-                        <a href="https://www.twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter text-dark"></i></a>
-                        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>
-                    </span>
-                </div>
-            </section>
+        <main class="pt-5 bg-light" role="main">
+            <div class="album container">
+                <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
+                <br>
+                <h3>Latest Posts</h3>
+                <hr>
+            </div>
 
-            <div class="album py-5 bg-light">
+            <div class="album py-5 bg-light pt-5">
                 <div class="container">
                     <div class="row">
+                        <div class="card-columns">
 
-                    {% comment %} Function {% endcomment %}
-                    {% for job in jobs.all %}
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm bg-light">
-                                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ job.image.url }}" role="img">
+                        {% for blog in blogs.all %}
+                            <div class="card small">
+                                <img class="card-img-top img-fluid" src="{{ blog.image.url }}" alt="Card image cap">
                                 <div class="card-body">
-                                    <p class="card-text">{{ job.summary }}</p>
-                                    {% comment %} 
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        </div>
-                                        <small class="text-muted">9 mins</small>
-                                    </div> {% endcomment %}
+                                    <h6 class="card-title ">{{ blog.title }}</h6>
+                                    <p class="card-text">{{ blog.summary }}</p>
+                                    <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
                                 </div>
                             </div>
-                        </div>
                         {% endfor %}
-                        {% comment %} End Function {% endcomment %}
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -124,5 +105,5 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
-
+    
 </html>
