--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Model">
         <meta name="author" content="Lucas Melo">
-        <title>Lucas Melo | Site</title>
+        <title>Lucas Melo | Blog</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-
         <style>
-        .bd-placeholder-img {
+            .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
             -webkit-user-select: none;
@@ -23,34 +23,35 @@
             user-select: none;
         }
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-            }
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+                }
         }
         </style>
+        
         <!-- Custom styles for this template -->
-        <link href="blog/templates/blog/album.css" rel="stylesheet">
+        <link href="portfolio/blog/templates/blog/album.css" rel="stylesheet">
 
     </head>
 
     <body>
         <header>
             <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Lucas Melo</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Lucas Melo</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">JOBS <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{% url 'home' %}">JOBS <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">RESUME</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="{% url 'blog' %}">BLOG</a>
                         </li>
                     </ul>
                     {% comment %} <form class="form-inline my-2 my-lg-0">
@@ -75,14 +76,16 @@
                         <div class="card-columns">
 
                         {% for blog in blogs.all %}
+                            <a href="{% url 'post' blog.id %}" class="text-muted">
                             <div class="card small">
-                                <img class="card-img-top img-fluid" src="{{ blog.image.url }}" alt="Card image cap">
+                                <img class="card-img-top img-fluid text-dark" src="{{ blog.image.url }}" alt="Card image cap">
                                 <div class="card-body">
                                     <h6 class="card-title ">{{ blog.title }}</h6>
                                     <p class="card-text">{{ blog.summary }}</p>
                                     <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
                                 </div>
                             </div>
+                            </a>
                         {% endfor %}
 
                         </div>
