--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,1 +1,90 @@
-{{ blog.title }}
+<!doctype html>
+<html lang="en">
+{% load static %}
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Model">
+        <meta name="author" content="Lucas Melo">
+        <title>Lucas Melo | Post</title>
+
+        <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <style>
+            .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+                }
+        }
+        </style>
+        
+        <!-- Custom styles for this template -->
+        <link href="portfolio/blog/templates/blog/album.css" rel="stylesheet">
+
+    </head>
+
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+                <a class="navbar-brand" href="{% url 'home' %}">Lucas Melo</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'home' %}">JOBS <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">RESUME</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'blog' %}">BLOG</a>
+                        </li>
+                    </ul>
+                    {% comment %} <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form> {% endcomment %}
+                </div>
+            </nav>
+        </header>
+
+        <main class="pt-5 bg-light" role="main">
+            <div class="album container">
+                <h1 class="pt-3 text-center">{{ blog.title }}</h1>
+                <p class="text-right"><small class="text-muted">{{ blog.pub_date }}</small></p>
+                <hr>
+                <img class="card-img-top text-dark" src="{{ blog.image.url }}" height="500" max-width="100%" alt="Card image cap">
+                <p class="pt-3 text-justify">{{ blog.body }}</p>
+            </div>
+        </main>
+
+    </body>
+
+    <footer class="text-muted">
+        <div class="container text-center">
+        {% comment %} 
+            <p class="float-right"><a href="#">Back to top</a></p> 
+        {% endcomment %}
+            <br>
+            <p class="small">CopyRight&copy; 2019 - {% now "Y" %} | <a href="#" class="text-secondary"> Lucas Melo</a></p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
+    
+</html>
