--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -6,17 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Model">
         <meta name="author" content="Lucas Melo">
-        <title>Lucas Melo | Site</title>
+        <title>Lucas Melo | Jobs</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
+        
         <style>
-        .bd-placeholder-img {
+            .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
             -webkit-user-select: none;
@@ -25,34 +24,35 @@
             user-select: none;
         }
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-            }
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+                }
         }
         </style>
+
         <!-- Custom styles for this template -->
-        <link href="jobs/templates/jobs/album.css" rel="stylesheet">
+        <link href="portfolio/jobs/templates/jobs/album.css" rel="stylesheet">
 
     </head>
 
     <body>
         <header>
             <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Lucas Melo</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Lucas Melo</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">JOBS <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{% url 'home' %}">JOBS <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">RESUME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="{% url 'blog' %}">BLOG</a>
                         </li>
                     </ul>
                     {% comment %} <form class="form-inline my-2 my-lg-0">
@@ -74,8 +74,8 @@
                         <a href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark"></i></a>
                         <a href="https://www.github.com" target="_blank" title="GitHub"><i class="fab fa-github text-dark"></i></a>
                         <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="Mail me"><i class="fas fa-envelope-open-text text-dark"></i></a>
-                        <a href="https://www.twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter text-dark"></i></a>
-                        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>
+                        <a href="https://www.instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>                        
                     </span>
                 </div>
             </section>
