Accounts Login, Signin and Logout

--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -45,6 +45,7 @@
                     </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link pl-1 pr-1" href="{% url 'home' %}">JOBS</a>
                         </li>
@@ -54,6 +55,23 @@
                         <li class="nav-item">
                             <a class="nav-link pl-1 pr-1" href="{% static 'CV - Lucas Melo.pdf'%}">RESUME <i class="fas fa-file-download"></i></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-1 pr-1" href="javascript:{document.getElementById('logout').submit()}" onclick="">LOGOUT</a>
+                            <form id="logout" method="POST" action="{% url 'logout' %}">{% csrf_token %}
+                                <input type="hidden"/>
+                            </form>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link pl-1 pr-1" href="{% url 'home' %}">JOBS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-1 pr-1" href="{% url 'blog' %}">BLOG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-1 pr-1" href="{% static 'CV - Lucas Melo.pdf'%}">RESUME <i class="fas fa-file-download"></i></a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
