--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -6,7 +6,7 @@
             <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
             <br>
             <h4>Latest Posts</h4>
-            <form class="form-inline my-1 my-lg-0">
+            <form class="form-inline my-1 my-lg-0" enctype="multipart/form-data">
                 <input class="form-control form-control-sm mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-sm btn-outline-secondary my-1 my-sm-0" type="submit">Search</button>
             </form>
