--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -4,7 +4,7 @@
     <main class="pt-5 bg-light" role="main">
         <div class="album container col-9">
             <h1 class="pt-3 text-center">{{ blog.title }}</h1>
-            <p class="text-right"><small class="text-muted">By: "Name" | {{ blog.pub_date }}</small></p>
+            <p class="text-right"><small class="text-muted">By: {{ blog.writer }} | {{ blog.pub_date }}</small></p>
             <hr>
             <img class="card-img-top text-dark" src="{{ blog.image.url }}" height="350" max-width="100%" alt="Card image cap">
             <p class="pt-3 text-justify">{{ blog.body }}</p>
