--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -32,7 +32,8 @@
         </style>
 
         <!-- Custom styles for this template -->
-        <link href="portfolio/templates/base.css" rel="stylesheet">
+        <link href="{% static 'portfolio/blog/templates/blog.css' %}" rel="stylesheet">
+        <link href="{% static 'portfolio/templates/base.css' %}" rel="stylesheet">
 
     </head>
 
@@ -56,8 +57,11 @@
                             <a class="nav-link pl-1 pr-1" href="{% static 'CV - Lucas Melo.pdf'%}">RESUME <i class="fas fa-file-download"></i></a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link pl-1 pr-1" href="{% url 'createpost' %}">CREATE POST</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link pl-1 pr-1" href="javascript:{document.getElementById('logout').submit()}" onclick="">LOGOUT</a>
-                            <form id="logout" method="POST" action="{% url 'logout' %}">{% csrf_token %}
+                            <form id="logout" name="logout" method="POST" action="{% url 'logout' %}">{% csrf_token %}
                                 <input type="hidden"/>
                             </form>
                         </li>
