--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
-<link href="signin.css" rel="stylesheet">
-
 {% block content %}
 
 <main class="p-5 bg-light" role="main">
@@ -12,28 +9,19 @@
                 <div class="form-row text-center">
                     <div class="form-group ">
                         <form class="form-signin">
-                        
-                        {% if error %}
-                        <br><br><br>
-                        {{ error }}
-                        <br>
-                        {% endif %}
-
+                            {% if error %}
+                            <br><br><br>
+                            {{ error }}
+                            <br>
+                            {% endif %}
                             <h1 class="h2 mb-3 font-weight-normal">Login</h1>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
                                 <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
-                            {% comment %} <label class="sr-only" for="inlineFormInputGroupUsername">Username</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                <div class="input-group-text">@</div>
-                                </div>
-                                <input name="egg" type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username" required>
-                            </div> {% endcomment %}
                             <label for="inputPassword" class="sr-only">Password</label>
-                            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required><br>
                             <button class="btn btn-md btn-primary btn-block" type="submit">Login</button>
                         </form>
                     </div>
