--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -6,8 +6,12 @@
             <h1 class="pt-3 text-center">{{ post.title }}</h1>
             <p class="text-right">
                 <small class="text-muted">By: {{ post.writer }} | {{ post.pub_date }}</small><br>
+                
                 <a href="#" target="_blank" title="Share"><i class="far fa-share-square text-dark"></i></a> | 
                 <a href="javascript:{document.getElementById('upvote').submit()}" title="Like"><i class="far fa-thumbs-up text-dark">{{ post.votes }}</i></a>
+                {% if user.is_authenticated %} | 
+                <a href="#" target="_blank" title="Edit"><i class="far fa-edit text-dark"></i></a>
+                {% endif %}
             </p>
             <form method="POST" id="upvote" action="{% url 'upvote' post.id %}">{% csrf_token %}
                 <input type="hidden">
