--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -56,7 +56,7 @@
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link pl-1 pr-1" href="{% url 'createpost' %}">CREATE POST</a>
+                            <a class="nav-link pl-1 pr-1" href="{% url 'post_create' %}">CREATE POST</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link pl-1 pr-1" href="javascript:{document.getElementById('logout').submit()}" onclick="">LOGOUT</a>
