--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -7,10 +7,11 @@
             <p class="text-right">
                 <small class="text-muted">By: {{ blog.writer }} | {{ blog.pub_date }}</small><br>
                 
-                <a href="#" target="_blank" title="Share"><i class="far fa-share-square text-dark"></i></a> | 
+                <a href="#" title="Share"><i class="far fa-share-square text-dark"></i></a> | 
                 <a href="javascript:{document.getElementById('upvote').submit()}" title="Like"><i class="far fa-thumbs-up text-dark">{{ blog.votes }}</i></a>
                 {% if user.is_authenticated %} | 
-                <a href="{% url 'post_update' blog.id %}" target="_blank" title="Edit"><i class="far fa-edit text-dark"></i></a>
+                <a href="{% url 'update' blog.id %}" title="Edit"><i class="far fa-edit text-dark"></i></a> | 
+                <a href="{% url 'delete' blog.id %}" title="Delete"><i class="far fa-trash-alt text-dark"></i></a> 
                 {% endif %}
             </p>
             <form method="POST" id="upvote" action="{% url 'upvote' blog.id %}">{% csrf_token %}
