--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -32,7 +32,7 @@
         </style>
 
         <!-- Custom styles for this template -->
-        <link href="portfolio/templates/base.css" rel="stylesheet">
+        {% comment %} <link href="portfolio/templates/base.css" rel="stylesheet"> {% endcomment %}
 
     </head>
 
