--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -5,13 +5,17 @@
     <main class="pt-5 bg-light" role="main">
         <div class="album container col-9 pt-5">
             <form method="POST" class="post-form" action="{% url 'create' %}" enctype="multipart/form-data">{% csrf_token %}
-                <div class="form-group" name="title">
+            {{ form.media }}
+                <div class="form-group">
                     {{ form.title | as_crispy_field }}
                 </div>
-                <div class="form-group" name="body">
+                <div class="form-group">
                     {{ form.body | as_crispy_field }}
                 </div>
-                <div class="form-group" name="fileInput">
+                <div class="form-group">
+                    {{ form.description | as_crispy_field }}
+                </div>
+                <div class="form-group">
                     {{ form.image | as_crispy_field }}
                 </div>
                 <button class="btn btn-md btn-primary btn-block" type="submit" value="post it">Post It.</button>
