--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -5,15 +5,18 @@
         <section class="jumbotron text-center">
             <div class="container pt-3">
                 <h1 class="jumbotron-heading">Hi, I'm Lucas.</h1>
-                <p class="text-muted">I was born in São José/SC, Brazil. I arrived in Dublin/IE in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
+                <p class="text-muted">I am a software developer based out of Dublin, Ireland. <br>
+                I was born in São José/SC, Brazil. 
+                I arrived in Dublin/IE in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement. <br>
+                <br><strong>Have a project, idea or problem you'd like to discuss? Let's chat!</p></strong>
                 <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
                 <br><br>
                 <span style="font-size: 2em">
-                    <a href="https://www.facebook.com/lucas.reinaldo.779" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark"></i></a>
-                    <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark"></i></a>
-                    <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="lucasreinaldo.demelo@hotmail.com"><i class="fas fa-envelope-open-text text-dark"></i></a>
-                    <a href="https://www.instagram.com/lreinaldodemelo" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark"></i></a>
-                    <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark"></i></a>                        
+                    <a href="https://www.facebook.com/lucas.reinaldo.779" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark grow"></i></a>
+                    <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark grow"></i></a>
+                    <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="lucasreinaldo.demelo@hotmail.com"><i class="fas fa-envelope-open-text text-dark grow"></i></a>
+                    <a href="https://www.instagram.com/lreinaldodemelo" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark grow"></i></a>
+                    <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark grow"></i></a>                        
                 </span>
             </div>
         </section>
@@ -23,8 +26,8 @@
                 <div class="row">
                 {% for job in jobs.all %}
                     <div class="col-md-3">
-                        <a href="#" class="text-muted">
-                            <div class="card mb-3 shadow-sm bg-light rounded">
+                        <a href="#" class="text-muted text-center">
+                            <div class="card mb-3 shadow-sm bg-light rounded grow">
                                 <img class="bd-placeholder-img card-img-top" width="100%" height="175" src="{{ job.image.url }}" role="img">
                                 <div class="card-body">
                                     <p class="card-text"><small><strong>{{ job.summary }}</strong></small></p>
