--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -4,13 +4,12 @@
     <main role="main" class="bg-light">
         <section class="jumbotron text-center">
             <div class="container pt-3">
-                <h1 class="jumbotron-heading">Hi, I'm Lucas.</h1>
-                <p class="text-muted">I am a software developer based out of Dublin, Ireland. <br>
-                I was born in São José/SC, Brazil. 
-                I arrived in Dublin/IE in October/2018 and I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement. <br>
-                <br><strong>Have a project, idea or problem you'd like to discuss? Let's chat!</p></strong>
+                <h2 class="jumbotron-heading">Hello there, I'm Lucas,</h2>
+                <p class="text-muted">A software developer based out of Dublin, Ireland. <br>
+                I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
                 <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
                 <br><br>
+                <p class="text-muted">Have a project, idea or problem you'd like to discuss? <strong>Let's chat!</strong></p>
                 <span style="font-size: 2em">
                     <a href="https://www.facebook.com/lucas.reinaldo.779" target="_blank" title="Facebook"><i class="fab fa-facebook text-dark grow"></i></a>
                     <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark grow"></i></a>
