--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
         <link rel="stylesheet"
-        href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css">
+            href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
 
@@ -104,7 +104,7 @@
             <p class="float-right"><a href="#">Back to top</a></p> 
         {% endcomment %}
             <br><br>
-            <p class="small">CopyRight&copy; 2019 - {% now "Y" %} | <a href="#" class="text-secondary"> Lucas Melo</a></p>
+            <p class="small">CopyRight&copy; 2019 - {% now "Y" %} | <a href="{% url 'home' %}" class="text-secondary"> Lucas Melo</a></p>
             <br><br>
         </div>
     </footer>
