--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -12,18 +12,19 @@
             </form>
             <hr>
         </div>
-
         <div class="album py-5 bg-light pt-5">
             <div class="container">
                 <div class="row">
                     <div class="card-columns rounded">
-                    {% for blog in blogs.all %}
-                        <a href="{% url 'detail' blog.id %}" class="text-muted">
+                    {% for blog in blogs %}
+                        <a href="{% url 'detail' blog.id %}" class="text-muted" enctype="multipart/form-data">
                             <div class="card small text-justify">
+                            {% if blog.image.url %}
                                 <img class="card-img-top img-fluid text-dark" src="{{ blog.image.url }}" alt="Card image cap">
+                            {% endif %}
                                 <div class="card-body">
-                                    <h6 class="card-title">{{ blog.title }}</h6>
-                                    <p class="card-text">{{ blog.summary }}</p>
+                                    <h6 class="card-title">{{ blog.title | safe }}</h6>
+                                    <p class="card-text">{{ blog.summary | safe }}</p>
                                     <p class="card-text"><small class="text-muted">{{ blog.pub_date }} | {{ blog.writer }}</small></p>
                                 </div>
                             </div>
@@ -33,5 +34,32 @@
                 </div>
             </div>
         </div>
+        {% comment %} pagination {% endcomment %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                {% if blogs.has_previous %}
+                <a class="page-link text-dark" href="?page=1" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                {% endif %}
+                </li>
+                {% for num in blogs.paginator.page_range %}
+                    {% if blogs.number == num %}
+                        <li class="page-item"><a class="page-link text-dark" href="?page={{num}}"><strong>{{ num }}</strong></a></li>
+                    {% elif num > blogs.number|add:'-3' and num < blogs.number|add:'3' %}
+                        <li class="page-item"><a class="page-link text-dark" href="?page={{num}}">{{ num }}</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if blogs.has_next %}
+                <a class="page-link text-dark" href="?page={{ blogs.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+                {% endif %}
+                </li>
+            </ul><br>
+        </nav>
     </main>
 {% endblock %}
