--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -10,12 +10,13 @@
                     {{ form.title | as_crispy_field }}
                 </div>
                 <div class="form-group">
-                    {{ form.body | as_crispy_field }}
-                </div>
-                <div class="form-group">Imagem de Capa
                     {{ form.image | as_crispy_field }}
                 </div>
-                <button class="btn btn-md btn-primary btn-block" type="submit" value="post it">Post It.</button>
+                <div class="form-group">
+                    {{ form.body | as_crispy_field }}
+                </div>
+                <button class="btn btn-md btn-primary btn-block" type="submit" value="post it">Post It</button>
+                <br>
             </form>
         </div>
     </main>
