--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -39,7 +39,7 @@
             <ul class="pagination justify-content-center">
                 <li class="page-item">
                 {% if blogs.has_previous %}
-                <a class="page-link text-dark" href="?page=1" aria-label="Previous">
+                <a class="page-link text-dark" href="?page={{ blogs.previous_page_number }}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
