--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -6,8 +6,8 @@
             <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
             <br>
             <h4>Latest Posts</h4>
-            <form class="form-inline my-1 my-lg-0">
-                <input class="form-control form-control-sm mr-sm-1" type="search" placeholder="Search" aria-label="Search">
+            <form method="GET" action="{% url 'search' %}" class="form-inline my-1 my-lg-0">
+                <input name="q" class="form-control form-control-sm mr-sm-1" type="search" placeholder="Keyword" aria-label="Search">
                 <button class="btn btn-sm btn-outline-secondary my-1 my-sm-0" type="submit">Search</button>
             </form>
             <hr>
