--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -7,7 +7,7 @@
             <br>
             <h4>Latest Posts</h4>
             <form method="GET" action="{% url 'search' %}" class="form-inline my-1 my-lg-0">
-                <input name="q" class="form-control form-control-sm mr-sm-1" type="search" placeholder="Keyword" aria-label="Search">
+                <input name="q" class="form-control form-control-sm mr-sm-1" type="search" placeholder="Keyword" aria-label="Search" value="{{ request.GET.q }}">
                 <button class="btn btn-sm btn-outline-secondary my-1 my-sm-0" type="submit">Search</button>
             </form>
             <hr>
