--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main class="pt-5 bg-light" role="main">
         <div class="album container">
-            <h1 class="pt-3 text-center">Welcome to Lucas Blog!</h1>
+            <h1 class="pt-5 text-center">Welcome to my thoughts!</h1>
             <br>
             <h4>Latest Posts</h4>
             <form method="GET" action="{% url 'search' %}" class="form-inline my-1 my-lg-0">
@@ -58,7 +58,6 @@
                     <span class="sr-only">Next</span>
                 </a>
                 {% endif %}
-                </li>
             </ul><br>
         </nav>
     </main>
