home, page 500 and profile image

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -7,7 +7,7 @@
                 <h2 class="jumbotron-heading">Hello there, I'm Lucas,</h2>
                 <p class="text-muted">A software developer based out of Dublin, Ireland. <br>
                 I am open to learning, prepared for the challenge of exercising new roles and activities with flexibility. I always try to keep myself updated, with the purpose of personal and professional improvement.</p>
-                <img class="center rounded-circle" src="{% static 'profile.jpg'%}" height="250" />
+                <img class="center rounded-circle" src="{% static 'profile2.jpeg'%}" height="250" />
                 <br><br>
                 <p class="text-muted">Have a project, idea or problem you'd like to discuss? <strong>Let's chat!</strong></p>
                 <span style="font-size: 2em">
@@ -15,12 +15,12 @@
                     <a href="https://github.com/LucasReinaldo" target="_blank" title="GitHub"><i class="fab fa-github text-dark grow"></i></a>
                     <a href="mailto:lucasreinaldo.demelo@hotmail.com" target="_blank" title="lucasreinaldo.demelo@hotmail.com"><i class="fas fa-envelope-open-text text-dark grow"></i></a>
                     <a href="https://www.instagram.com/lreinaldodemelo" target="_blank" title="Instagram"><i class="fab fa-instagram text-dark grow"></i></a>
-                    <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark grow"></i></a>                        
+                    <a href="https://www.linkedin.com/in/lucas-reinaldo-de-melo" target="_blank" title="LinkedIn"><i class="fab fa-linkedin text-dark grow"></i></a>
                 </span>
             </div>
         </section>
 
-        <div class="album py-5 bg-light">
+        <div class="album p-3 bg-light">
             <div class="container">
                 <div class="row">
                 {% for job in jobs.all %}
