--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css">
 
         <!-- Custom styles for this template -->
-        <link href= "{% static "base.css" rel="stylesheet" %}">
+        <link rel="stylesheet" href= "{% static 'base.css' %}">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
